LoginDatabase::Init: rollback before closing a DB

Currently, LoginDatabase::Init closes its sql::Connection on error. It also
uses an sql::Transaction to roll back changes made so far. Unfortunately, it
does so in the wrong order.

This CL fixes that and adds a test for it.

BUG=639803

Review-Url: https://codereview.chromium.org/2265103002
Cr-Commit-Position: refs/heads/master@{#413460}

Former-commit-id: 7bdd9928d167b3de18f68219a3ea0b817cb99ad3